# pr-review-style-imitate

./: .env.example  .gitignore  README.md  pyproject.toml
src/notebooks/: 1.llm_classify_pr.ipynb  2.llm_generate_reviewer_prompts.ipynb  3.llm_apply_reviewer_style.ipynb
src/scripts/: fetch_pr_diffs.py
